Complete docker support

--- a/deps/Dockerfile
+++ b/deps/Dockerfile
@@ -1,8 +1,8 @@
-FROM scratch
+FROM alpine
 
 ADD rootfs.tar.gz /
 COPY config.gcfg /
 COPY nsproxy /
 COPY run.sh /
 
-CMD ["/nsproxy"]
+CMD ["/run.sh"]
