Update travis config with docker push

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ install:
 script:
   - make stat
   - make test
+
+after_success:
+  - make clean
+  - make docker
+  - docker login -e $DOCKER_EMAIL -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+  - docker tag unixvoid/nsproxy unixvoid/nsproxy:develop
+  - docker push unixvoid/nsproxy
