Rename bin when copying to docker

--- a/deps/Dockerfile
+++ b/deps/Dockerfile
@@ -3,7 +3,7 @@ FROM scratch
 ENV DIFF=<DIFF>
 ADD rootfs.tar.gz /
 COPY config.gcfg /
-COPY nsproxy* /
+COPY nsproxy* /nsproxy
 COPY run.sh /
 
 CMD ["/run.sh"]
