Fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ after_success:
   - docker push unixvoid/nsproxy:develop
   - curl -i --form sec=$BINDER_SEC --form file=@`ls bin/nsproxy*` --form path=nsproxy/ https://cryo.unixvoid.com/upload
   - curl -i --form sec=$BINDER_SEC --form file=@`ls bin/nsproxy*` --form filename=nsproxy-latest-linux-amd64 --form path=nsproxy/ https://cryo.unixvoid.com/upload
+  - curl -d sec=$BINDER_SEC -d key=unixvoid.sec https://cryo.unixvoid.com/getfile --output unixvoid.pub
   - curl -d sec=$BINDER_SEC -d key=unixvoid.sec https://cryo.unixvoid.com/getfile --output unixvoid.sec
-  - curl https://cryo.unixvoid.com/bin/rkt/pubkey/pubkeys.gpg --output unixvoid.pub
   - make clean travisaci
   - make signaci
   - curl -i --form sec=$BINDER_SEC --form file=@nsproxy.aci --form filename=nsproxy-latest-linux-amd64.aci --form path=rkt/nsproxy/ https://cryo.unixvoid.com/upload
